@@ -100,7 +100,8 @@ FreeRADIUS 1.0.0 ; $Date$, urgency=low
 	* Add support to rlm_sql for post-authentication query execution.
 	* Add support to rlm_sql for accounting_update_query_alt
 	* Add support to checkrad.pl for microtek-brand NASs over SNMP
-	
+	* Add support for supplementary groups of switched-to user
+
 FreeRADIUS 0.9.3 ; Date: 2003/11/20 20:15:48, urgency=high
 
 	* Change rlm_eap to not log an error if given a non-EAP packet
